[gd_scene load_steps=27 format=3 uid="uid://c4xcvylfale6f"]

[ext_resource type="Material" uid="uid://cw8kovgeqm575" path="res://Assets/Resource/Shaders/black_white_material.tres" id="1_5d2od"]
[ext_resource type="Theme" uid="uid://n3ns3n53r5ve" path="res://Assets/Resource/Themes/pixel/pixel_theme.tres" id="2_r5ojg"]
[ext_resource type="Script" path="res://scene/UpScroll.gd" id="3_qntv6"]
[ext_resource type="Script" path="res://Main/Components/UpScroll/DownButtons.gd" id="4_okx0g"]
[ext_resource type="StyleBox" uid="uid://drde2dw1q03t3" path="res://Assets/Resource/Themes/pixel/pixel_style_panel_texture_reverse.tres" id="5_5i6if"]
[ext_resource type="Texture2D" uid="uid://ww1ha52mb06w" path="res://Assets/Textures/ui/down.png" id="5_w052i"]
[ext_resource type="Texture2D" uid="uid://dk5qqjkc8j62c" path="res://Assets/Textures/button/return.png" id="6_ye2jm"]
[ext_resource type="Texture2D" uid="uid://bicjlbabtia1b" path="res://Assets/Textures/button/home.png" id="7_bihpt"]
[ext_resource type="Texture2D" uid="uid://m33jcjvq23vb" path="res://Assets/Textures/button/star.png" id="8_0l2at"]
[ext_resource type="PackedScene" uid="uid://wded43q166yw" path="res://Main/Components/UpScroll/notification_box.tscn" id="9_758t8"]
[ext_resource type="Texture2D" uid="uid://coha82grovulr" path="res://Assets/Textures/bg/up.png" id="9_esbkp"]
[ext_resource type="Texture2D" uid="uid://cim2jxa2gvuwp" path="res://Assets/Textures/ContactProfiles/default_profile_38.png" id="11_njfeg"]
[ext_resource type="Texture2D" uid="uid://mf8o8s4wnrf" path="res://Assets/Textures/ui/up_scroll1.png" id="12_my5fo"]
[ext_resource type="Texture2D" uid="uid://bnfx5c6cqtjd8" path="res://Assets/Textures/ui/up_scroll2.png" id="13_7kxme"]
[ext_resource type="Texture2D" uid="uid://dq4ok1jyd50gu" path="res://Assets/Textures/ui/up_scroll3.png" id="14_ory3p"]
[ext_resource type="Script" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="16_djf7a"]
[ext_resource type="Script" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="17_ivlbs"]

[sub_resource type="Gradient" id="Gradient_oueyo"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.593458, 0.771028)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pp4tw"]
gradient = SubResource("Gradient_oueyo")
width = 16
height = 16
fill = 1
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[sub_resource type="AnimatedTexture" id="AnimatedTexture_7lotu"]
frames = 3
frame_0/texture = ExtResource("12_my5fo")
frame_0/duration = 0.5
frame_1/texture = ExtResource("13_7kxme")
frame_1/duration = 0.5
frame_2/texture = ExtResource("14_ory3p")
frame_2/duration = 0.5

[sub_resource type="Resource" id="Resource_lp8is"]
script = ExtResource("17_ivlbs")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_r8i8t"]
script = ExtResource("17_ivlbs")
friction = 8.0
minimum_velocity = 0.4
rebound_strength = 10.0

[sub_resource type="Animation" id="Animation_4abu1"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NotificationContainer:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-70, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_b48wf"]
resource_name = "end"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NotificationContainer:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0, -70, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}

[sub_resource type="Animation" id="Animation_7k064"]
resource_name = "notification"
length = 2.6
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NotificationContainer:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(-70, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, -70, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 2.6, 3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vuhww"]
_data = {
"RESET": SubResource("Animation_4abu1"),
"end": SubResource("Animation_b48wf"),
"notification": SubResource("Animation_7k064")
}

[node name="UpScroll" type="Control" node_paths=PackedStringArray("scroll_page", "current_time")]
material = ExtResource("1_5d2od")
layout_mode = 3
anchors_preset = 0
offset_right = 304.0
offset_bottom = 540.0
mouse_filter = 2
theme = ExtResource("2_r5ojg")
script = ExtResource("3_qntv6")
scroll_page = NodePath("ScrollPage")
current_time = NodePath("Up/CenterContainer/CurrentTime")

[node name="DownButtons" type="Control" parent="."]
use_parent_material = true
layout_mode = 3
anchors_preset = 0
offset_top = 500.0
offset_right = 304.0
offset_bottom = 540.0
size_flags_vertical = 3
script = ExtResource("4_okx0g")

[node name="TextureRect" type="TextureRect" parent="DownButtons"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_w052i")
expand_mode = 2
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="DownButtons"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DownButtons/CenterContainer"]
use_parent_material = true
custom_minimum_size = Vector2(224, 0)
layout_mode = 2

[node name="BackButton" type="TextureButton" parent="DownButtons/CenterContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("6_ye2jm")
ignore_texture_size = true
stretch_mode = 5

[node name="HomeButton" type="TextureButton" parent="DownButtons/CenterContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("7_bihpt")
ignore_texture_size = true
stretch_mode = 5

[node name="MissionsButton" type="TextureButton" parent="DownButtons/CenterContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("8_0l2at")
ignore_texture_size = true
stretch_mode = 5

[node name="NotiNumber" type="Control" parent="DownButtons"]
use_parent_material = true
custom_minimum_size = Vector2(16, 16)
anchors_preset = 0
offset_left = 232.0
offset_right = 248.0
offset_bottom = 16.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="DownButtons/NotiNumber"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_pp4tw")
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="Number" type="Label" parent="DownButtons/NotiNumber"]
use_parent_material = true
custom_minimum_size = Vector2(0, 15)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "â€¢"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Up" type="Control" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 0
offset_right = 304.0
offset_bottom = 20.0
mouse_filter = 2

[node name="MouseEnter" type="ColorRect" parent="Up"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="TextureRect2" type="TextureRect" parent="Up"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("9_esbkp")

[node name="CenterContainer" type="CenterContainer" parent="Up"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CurrentTime" type="Label" parent="Up/CenterContainer"]
use_parent_material = true
layout_mode = 2
text = "21:28"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NotificationContainer" type="Control" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 0
offset_top = -70.0
offset_right = 304.0
offset_bottom = -18.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="NotificationBox" parent="NotificationContainer" instance=ExtResource("9_758t8")]
layout_mode = 0
offset_left = 12.0
offset_right = 292.0
default_texture = ExtResource("11_njfeg")

[node name="TextureRect" type="TextureButton" parent="."]
use_parent_material = true
layout_mode = 0
offset_left = 286.0
offset_top = 8.0
offset_right = 302.0
offset_bottom = 26.0
mouse_filter = 1
texture_normal = SubResource("AnimatedTexture_7lotu")

[node name="ScrollPage" type="Control" parent="."]
use_parent_material = true
anchors_preset = 0
offset_top = -540.0
offset_right = 304.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="ScrollPage"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("5_5i6if")

[node name="MouseEnter" type="ColorRect" parent="ScrollPage"]
modulate = Color(1, 1, 1, 0)
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 250.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="ScrollPage"]
use_parent_material = true
layout_mode = 0
offset_left = 44.0
offset_top = 529.0
offset_right = 260.0
offset_bottom = 532.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="ScrollPage"]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -220.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollPage/CenterContainer"]
use_parent_material = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Date" type="Label" parent="ScrollPage/CenterContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
text = "Wednesday, December 6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentTimeBig" type="Label" parent="ScrollPage/CenterContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "20:22"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="ScrollPage"]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -270.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Year" type="Label" parent="ScrollPage/CenterContainer2"]
use_parent_material = true
layout_mode = 2
text = "Year 2083"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ScrollPage"]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -130.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("16_djf7a")
wheel_scroll_damper = SubResource("Resource_lp8is")
dragging_scroll_damper = SubResource("Resource_r8i8t")

[node name="MarginContainer" type="MarginContainer" parent="ScrollPage/ScrollContainer"]
use_parent_material = true
custom_minimum_size = Vector2(304, 360)
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollPage/ScrollContainer/MarginContainer"]
use_parent_material = true
layout_mode = 2
alignment = 2

[node name="Placeholder" type="Control" parent="ScrollPage/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 360)
layout_mode = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vuhww")
}

[connection signal="pressed" from="DownButtons/CenterContainer/HBoxContainer/BackButton" to="DownButtons" method="_on_back_button_pressed"]
[connection signal="pressed" from="DownButtons/CenterContainer/HBoxContainer/HomeButton" to="DownButtons" method="_on_home_button_pressed"]
[connection signal="pressed" from="DownButtons/CenterContainer/HBoxContainer/MissionsButton" to="DownButtons" method="_on_missions_button_pressed"]
[connection signal="gui_input" from="Up/MouseEnter" to="." method="_on_mouse_enter_gui_input"]
[connection signal="pressed" from="TextureRect" to="." method="_on_texture_rect_pressed"]
[connection signal="gui_input" from="ScrollPage/MouseEnter" to="." method="_on_mouse_enter_gui_input"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
